# ha-poe-plugin

./: .flake8  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  pytest.ini
.github/workflows/: hassfest.yml  release.yml  validate.yml
custom_components/exaviz/: __init__.py  base_entity.py  binary_sensor.py  board_detector.py  button.py  config_flow.py  const.py  coordinator.py  device_identifier.py  info.md  manifest.json  poe_readers.py  sensor.py  services.py  services.yaml  strings.json  switch.py  utils.py
custom_components/exaviz/translations/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt-BR.json  zh-Hans.json
custom_components/exaviz/www/: exaviz-cards.js
lovelace-cards/: .eslintrc.json  FRONTEND-DEVELOPMENT.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
lovelace-cards/src/: index.ts
lovelace-cards/src/cards/: exaviz-poe-card.ts
lovelace-cards/src/styles/: exaviz-theme.css
lovelace-cards/src/test/: setup.ts
lovelace-cards/src/types/: alerts.ts  exaviz-card-config.ts  hass.ts  homeassistant.ts  vms.ts
lovelace-cards/src/utils/: icon-manager.ts  logo-manager.ts
tests/: conftest.py  test_backoff_state_regression.py  test_board_detector.py  test_code_implementation_backoff.py  test_coordinator.py  test_cruiser_port_control.py  test_deployment_issues.py  test_deployment_validation.py  test_device_identifier.py  test_enable_port_no_reset.py  test_init_basic.py  test_integration_validation.py  test_interceptor_addon_states.py  test_poe_readers.py  test_poe_states.py  test_port_status_display.py  test_regression_fixes.py  test_switch.py  test_switch_mode_discovery.py  test_tcpdump_bosch_detection.py  test_utils.py
